--- a/app/views/assignments/settings.html.haml
+++ b/app/views/assignments/settings.html.haml
@@ -136,9 +136,9 @@
                 - if assignment.grade_select?
                   %label.sr-only{:for => "score_levels"}
                     Score Levels
-                  = select_tag(:assignment_score_levels, options_from_collection_for_select(assignment.assignment_score_levels_set, :value, :name))
+                  = select_tag(:assignment_score_levels, options_from_collection_for_select(assignment.assignment_score_levels, :value, :name))
                 - elsif assignment.grade_radio?
-                  - assignment.assignment_score_levels_set.each do |asl|
+                  - assignment.assignment_score_levels.each do |asl|
                     = radio_button_tag(asl.name, asl.value)
                     %span.not_bold= label_tag(asl.name)
                     %br
