--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -32,5 +32,5 @@
 
       - if current_user.present?
         %a.btn-navbar-right.btn-navbar-navtoggle.btn-flyout-right-trigger
-          %i.fa.fa-user-plus.fa-fw
+          %i.fa.fa-user.fa-fw
 #right-flyout-nav.layout-right-flyout
