--- a/app/assets/javascripts/angular/templates/ng_predictor_graphic.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_graphic.html.haml
@@ -9,10 +9,10 @@
       %g{"id" => "svg-key"}
         %rect#svg-graph-points-earned{"x"=>"10", "y"=>"90", "width"=>"20", "height"=>"20"}
         %text{"x"=>"32", "y"=>"106", "font-family"=>"Verdana"}
-          Total Earned: {{allPointsEarned()}}
+          Total Earned: {{allPointsEarned() | number}}
         %rect#svg-graph-points-predicted{"x"=>"210", "y"=>"90", "width"=>"20", "height"=>"20"}
-        %text{"x"=>"232", "y"=>"106", "font-family"=>"Verdana"}
-          Total Predicted: {{allPointsPredicted()}}
+        %text{"x"=>"252", "y"=>"106", "font-family"=>"Verdana"}
+          Total Predicted: {{allPointsPredicted() | number}} (left to earn: {{allPointsPredicted() - allPointsEarned() | number}})
 
 
 
