--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -100,7 +100,7 @@
       .form-item
         = f.label :professors
         = f.input :instructors_of_record_ids, collection: f.object.staff,
-          label: false, wrapper: false, input_html: { multiple: true }
+          label: false, wrapper: false, input_html: { multiple: true, data: { behavior: "multi-select" } }
         .form_label Enter a professor's name to add them to this course
 
   %section
