Cleaning up layout of standard edit

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -218,3 +218,7 @@ ul.accepts_submission_types
       width: 6rem
     &.low-range
       width: 6rem
+
+input[type=text]
+    padding: .5rem
+    width: 15rem
