--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -114,12 +114,11 @@ h4#awarded-header
   padding-top: 2px
 
 button#remove-badges, button#add-badges
-  padding: 4px 8px !important
   font-weight: bold !important
-  margin-left: 12px
-  position: absolute
-  margin-top: 1.3rem
-  top: 0
+  margin-left: .5rem
+  position: relative
+  margin-top: 0rem
+  top: -.3rem
   font-size: .8rem
   @include rounded-corners(4px)
   @include opacity(0.7)
