--- a/app/views/grades/standard_edit/_badges_available.html.haml
+++ b/app/views/grades/standard_edit/_badges_available.html.haml
@@ -1,6 +1,6 @@
 - if @badges.present?
-  %h4.uppercase#badges-available
-    #{term_for :badges} Available
+  %h4#badges-available
+    #{term_for :badges} available
     %button#add-badges(ng-click="addRemainingEarnedBadges($event)" ng-show="badgesAvailable()") Add All
 
   .grade-badge.hexagon.available(title="{{badge.point_total}} Points: {{badge.description}}" ng-repeat="badge in badges" ng-class="{unearned: badge.unearned(), earned: badge.earned()}" ng-click="earnBadgeForStudent(badge)" hide-after-fade)
