--- a/app/views/grades/standard_edit/_score_level_grading_fields.html.haml
+++ b/app/views/grades/standard_edit/_score_level_grading_fields.html.haml
@@ -1,4 +1,4 @@
-gradebox(ng-click="grade.disableCustomValue()" ng-class="{'inactive': grade.is_custom_value}" tooltips tooltip-size="medium" tooltip-title="Click to use score levels" tooltip-side="bottom" tooltip-delay="800")
+#gradebox(ng-click="grade.disableCustomValue()" ng-class="{'inactive': grade.is_custom_value}" tooltips tooltip-size="medium" tooltip-title="Click to use score levels" tooltip-side="bottom" tooltip-delay="800")
 
   -# dynamic label for select box
   %label(for="grade_raw_score" ng-click="grade.disableCustomValue()" ng-class="{'inactive': grade.is_custom_value}")
