--- a/app/views/grades/standard_edit/_standard_edit_attachment.html.haml
+++ b/app/views/grades/standard_edit/_standard_edit_attachment.html.haml
@@ -1,5 +1,5 @@
 .grade-attachments
-  %h4.uppercase Attachments
+  .bold Attachments
   = f.simple_fields_for :grade_files, @grade.grade_files.new do |gf|
     = gf.file_field :file, :multiple => true
   - if @grade.grade_files.exists?
@@ -15,3 +15,5 @@
           - else
             = link_to gf.filename, gf.url, :target => "_blank"
             = link_to "(Remove)", remove_uploads_path({ :model => "GradeFile", :grade_id => @grade.id, :upload_id => gf.id } )
+  %br
+  %br
