--- a/app/views/grades/_standard_edit.html.haml
+++ b/app/views/grades/_standard_edit.html.haml
@@ -15,6 +15,7 @@
       = render 'submissions/instructor_data'
 
   %section
+    %hr.dotted
     = simple_form_for @grade, url: assignment_grade_path(@assignment), method: :patch do |f|
       = hidden_field_tag :student_id, current_student.id
       = hidden_field_tag :instructor_modified, true
@@ -53,7 +54,7 @@
           - elsif @grade.status.blank?
             = f.hidden_field :status, value: 'Graded'
 
-          %section(ng-cloak)
+          .attachments(ng-cloak)
             = render partial: "grades/standard_edit/standard_edit_attachment", locals: {f: f}
 
           .text-feedback
