--- a/app/assets/stylesheets/_timeline.scss
+++ b/app/assets/stylesheets/_timeline.scss
@@ -1,3 +1,5 @@
+#loading{position: relative;padding: 200px;}
+
 /*
     TimelineJS - ver. 2.30.0 - 2014-02-20
     Copyright (c) 2012-2013 Northwestern University
