--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,6 +8,7 @@
  *= require jquery.dynatable
  *= require angular-tooltips.min
  *= require_tree ./froala
+ *= require timeline
 /* Branding colors */
 
 $px-3: .1875rem;
