--- a/app/views/analytics/top_10.html.haml
+++ b/app/views/analytics/top_10.html.haml
@@ -13,5 +13,6 @@
 
   = render 'students_table', :course => current_course, :students => @bottom_ten_students
 
-  %h4.subtitle #{term_for :team} Overview
-  = render 'teams_table', :course => current_course, :teams => current_course.teams
+  - if current_course.teams.present?
+    %h4.subtitle #{term_for :team} Overview
+    = render 'teams_table', :course => current_course, :teams => current_course.teams
