Select forms in firefox

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -23,11 +23,12 @@ fieldset
   border: none
   padding: 0
 
-select
+select, .ui-tabs-panel select
   background-color: #FFF
   padding: .5rem !important
-  width: 15rem
+  width: 16rem
   height: 2.25rem
+  font-size: 12px
   font-family: Avenir, sans-serif
 
 select:hover
