Display hover info on required icon in syllabi

--- a/app/views/students/syllabus/_assignment_icons.haml
+++ b/app/views/students/syllabus/_assignment_icons.haml
@@ -3,7 +3,7 @@
 - if assignment.required?
   %a
     %i.fa.fa-exclamation-circle.fa-fw
-  .display_on_hover
+  .display_on_hover.unlock_keys
     This #{term_for :assignment} is required!
 
 - if assignment.is_unlockable?
