--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -9,6 +9,9 @@
   border-left: 1px dashed $primary-color-1
 
   .avatar
+    text-align: center
+    img 
+      margin: .5rem auto
     ul li
       display: inline
       a:hover
