styling student profile pics

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -2,7 +2,7 @@
 #userBarTotal
   clear: both
   padding: 0
-  margin-left: -2rem
+  margin-left: -1.5rem
   height: 80px
 
   .highcharts-grid
@@ -18,7 +18,7 @@ img.earned
 .bar_magic
   height: 2rem
   padding-top: .5rem
-  border: 1px solid #ccc
+  border: 1px solid $color-grey-3
   border-radius: 25px
   background-color: #eee
   border-collapse: true
