--- a/app/views/grades/import_results.html.haml
+++ b/app/views/grades/import_results.html.haml
@@ -8,34 +8,32 @@
   - unless @result.unsuccessful.empty?
     %h4.subtitle
       = "#{@result.unsuccessful.count} #{"Grade".pluralize(@result.unsuccessful.count)} Not Imported"
-    .columns
-      %table.responsive
-        %thead
+    %table.responsive.nofeatures_dynatable
+      %thead
+        %tr
+          %th Data
+          %th Error(s)
+      %tbody
+        - @result.unsuccessful.each do |row|
           %tr
-            %th Data
-            %th Error(s)
-        %tbody
-          - @result.unsuccessful.each do |row|
-            %tr
-              %td= row[:data]
-              %td= row[:errors]
+            %td= row[:data]
+            %td= row[:errors]
 
   %h4.subtitle
     = "#{@result.successful.count} #{"Grade".pluralize(@result.successful.count)} Imported Successfully"
-  .columns
-    %table.responsive.nofeatures_default_last_name_dynatable
-      %thead
+  %table.responsive.nofeatures_default_last_name_dynatable
+    %thead
+      %tr
+        %th First Name
+        %th Last Name
+        %th Email
+        %th Score
+        %th Feedback
+    %tbody
+      - @result.successful.each do |grade|
         %tr
-          %th First Name
-          %th Last Name
-          %th Email
-          %th Score
-          %th Feedback
-      %tbody
-        - @result.successful.each do |grade|
-          %tr
-            %td= link_to grade.student.first_name, student_path(grade.student)
-            %td= link_to grade.student.last_name, student_path(grade.student)
-            %td= link_to grade.student.email, student_path(grade.student)
-            %td= grade.raw_score
-            %td= grade.feedback
+          %td= link_to grade.student.first_name, student_path(grade.student)
+          %td= link_to grade.student.last_name, student_path(grade.student)
+          %td= link_to grade.student.email, student_path(grade.student)
+          %td= grade.raw_score
+          %td= grade.feedback
