--- a/app/views/users/import_results.html.haml
+++ b/app/views/users/import_results.html.haml
@@ -4,36 +4,34 @@
 
 .pageContent
   = render 'layouts/alerts'
-  
+
   - unless @result.unsuccessful.empty?
     %h4.subtitle
       = "#{@result.unsuccessful.count} #{"Student".pluralize(@result.unsuccessful.count)} Not Imported"
-    .columns
-      %table.responsive
-        %thead
+    %table.responsive.nofeatures_dynatable
+      %thead
+        %tr
+          %th Data
+          %th Error(s)
+      %tbody
+        - @result.unsuccessful.each do |row|
           %tr
-            %th Data
-            %th Error(s)
-        %tbody
-          - @result.unsuccessful.each do |row|
-            %tr
-              %td= row[:data]
-              %td= row[:errors]
+            %td= row[:data]
+            %td= row[:errors]
 
   %h4.subtitle
     = "#{@result.successful.count} #{"Student".pluralize(@result.successful.count)} Imported Successfully"
-  .columns
-    %table.responsive.nofeatures_default_last_name_dynatable
-      %thead
+  %table.responsive.nofeatures_default_last_name_dynatable
+    %thead
+      %tr
+        %th First Name
+        %th Last Name
+        %th Username
+        %th Email
+    %tbody
+      - @result.successful.each do |user|
         %tr
-          %th First Name
-          %th Last Name
-          %th Username
-          %th Email
-      %tbody
-        - @result.successful.each do |user|
-          %tr
-            %td= link_to user.first_name, student_path(user)
-            %td= link_to user.last_name, student_path(user)
-            %td= link_to user.username, student_path(user)
-            %td= link_to user.email, student_path(user)
+          %td= link_to user.first_name, student_path(user)
+          %td= link_to user.last_name, student_path(user)
+          %td= link_to user.username, student_path(user)
+          %td= link_to user.email, student_path(user)
