silence updates for instructors

--- a/app/assets/javascripts/angular/templates/ng_predictor_badges.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_badges.html.haml
@@ -18,8 +18,7 @@
 
       .predictor-badge-main
 
-        %img.predictor-badge-icon{ :src => '{{badge.icon}}', :alt => '{{badge.name}}' }
-
+        %img.predictor-badge-icon{ 'ng-src' => '{{badge.icon}}', :alt => '{{badge.name}}' }
 
         .badge-complete{'ng-if'=>'badgeCompleted(badge)'}
           .value
