--- a/app/views/grades/import.html.haml
+++ b/app/views/grades/import.html.haml
@@ -17,6 +17,6 @@
       Columns should be in the following order:
       %br #{term_for :student}'s first name, #{term_for :student}'s last name, #{term_for :student}'s email or username, score, and any text feedback you'd like to include. #{link_to "Download Sample File", grade_import_assignment_path(format: 'csv'), :class => "bold"}
 
-    = form_tag({:action => :email_import}, :multipart => true) do
+    = form_tag({:action => :upload}, :multipart => true) do
       = file_field_tag 'file'
       = submit_tag("Import", :class => "button")
