--- a/app/views/grades/_standard_edit.html.haml
+++ b/app/views/grades/_standard_edit.html.haml
@@ -25,20 +25,18 @@
 
         .panel(ng-cloak)
           - if @assignment.pass_fail?
-            .switch-label.pass-fail-contingent{:data => {:on => "#{term_for :pass}", :off => "#{term_for :fail}"}}
-              - if @grade.pass_fail_status
-                = term_for @grade.pass_fail_status
-              - else
-                = term_for :fail
+            .switch-label
+              = "#{term_for :pass} / #{term_for :fail} Status"
             .pass-fail-grade-toggle
-              .switch
+              .switch.pass-fail-contingent{:data => {:on => "#{term_for :pass}", :off => "#{term_for :fail}"}}
                 = f.check_box :pass_fail_status, { :checked=> @grade.pass_fail_status == "Pass" }, checked_value = "Pass", unchecked_value = "Fail"
-                = f.label :pass_fail_status
-
-          - if @assignment_score_levels.count > 0 # use this longhand method to save a request
-            = render partial: "grades/standard_edit/score_level_grading_fields", locals: {f:f}
+                - label_text = @grade.pass_fail_status ? (term_for @grade.pass_fail_status) : (term_for :fail)
+                = f.label :pass_fail_status, label_text
           - else
-            = render partial: "grades/standard_edit/raw_score_grading_fields", locals: {f:f}
+            - if @assignment_score_levels.count > 0 # use this longhand method to save a request
+              = render partial: "grades/standard_edit/score_level_grading_fields", locals: {f:f}
+            - else
+              = render partial: "grades/standard_edit/raw_score_grading_fields", locals: {f:f}
 
           - if @assignment.release_necessary?
             .assignment-status
