--- a/app/views/assignments/_self_log_form.html.haml
+++ b/app/views/assignments/_self_log_form.html.haml
@@ -3,5 +3,7 @@
   = hidden_field_tag :present, !present
   - if !present
     - if assignment.has_levels?
-      = f.select :raw_score, assignment.assignment_score_levels.map { |l| [l.formatted_name,l.value] }
+      = f.select :raw_score, assignment.assignment_score_levels.map { |l| [l.formatted_name,l.value] }, :prompt => "Select your grade"
+    - else
+      = f.select :raw_score, [["I have completed this work", assignment.point_total]], :prompt => "Select your grade"
     = f.submit (assignment.student_logged_button_text), :class => "button #{present ? 'alert' : 'success'}"
