--- a/app/views/students/syllabus/_assignments.haml
+++ b/app/views/students/syllabus/_assignments.haml
@@ -58,7 +58,8 @@
                   - if assignment.pass_fail?
                     - if current_student.grade_released_for_assignment?(assignment)
                       .bold
-                        = "#{term_for grade_for_assignment.pass_fail_status}"
+                        - if grade_for_assignment.pass_fail_status
+                          = term_for(grade.pass_fail_status)
                     - else
                       = "#{term_for :pass}/#{term_for :fail}"
                   - else
