Updated language around point totals

--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -34,6 +34,11 @@ section.features
   margin: 0
   padding: 0
 
+.video-container
+  background-color: $primary-color-3
+  opacity: .9
+
+
 section.forgot-password, section.login
   padding: 4rem   
   background-color: lighten($color-yellow-1, 10%)
@@ -118,8 +123,8 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
     font-size: 1rem
 
     h1
-      margin-top: 1.5rem
-      color: $color-green-1
+      margin-top: 1.25rem
+      color: $color-yellow-2
 
     p
       margin: 0
