--- a/app/assets/stylesheets/_datepicker.sass
+++ b/app/assets/stylesheets/_datepicker.sass
@@ -1,3 +1,6 @@
+.ui-datepicker.ui-widget-content 
+	background: $color-blue-3
+
 .ui-timepicker-div .ui-widget-header
 	margin-bottom: 8px
 .ui-timepicker-div dl
@@ -32,28 +35,23 @@
 /* Shortened version style */
 .ui-timepicker-div.ui-timepicker-oneLine
 	padding-right: 2px
-.ui-timepicker-div.ui-timepicker-oneLine .ui_tpicker_time,
-.ui-timepicker-div.ui-timepicker-oneLine dt
+.ui-timepicker-div.ui-timepicker-oneLine .ui_tpicker_time, .ui-timepicker-div.ui-timepicker-oneLine dt
 	display: none
 .ui-timepicker-div.ui-timepicker-oneLine .ui_tpicker_time_label
 	display: block 
 	padding-top: 2px
 .ui-timepicker-div.ui-timepicker-oneLine dl
 	text-align: right
-.ui-timepicker-div.ui-timepicker-oneLine dl dd,
-.ui-timepicker-div.ui-timepicker-oneLine dl dd > div
+.ui-timepicker-div.ui-timepicker-oneLine dl dd, .ui-timepicker-div.ui-timepicker-oneLine dl dd > div
 	display:inline-block
 	margin:0
 
-.ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_minute:before,
-.ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_second:before 
+.ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_minute:before, .ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_second:before 
 	content:':'
 	display:inline-block
 
-.ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_millisec:before,
-.ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_microsec:before
+.ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_millisec:before, .ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_microsec:before
 	content:'.'
 	display:inline-block
-.ui-timepicker-div.ui-timepicker-oneLine .ui_tpicker_unit_hide,
-.ui-timepicker-div.ui-timepicker-oneLine .ui_tpicker_unit_hide:before
+.ui-timepicker-div.ui-timepicker-oneLine .ui_tpicker_unit_hide, .ui-timepicker-div.ui-timepicker-oneLine .ui_tpicker_unit_hide:before
 	display: none
