--- a/app/views/assignment_types/index.html.haml
+++ b/app/views/assignment_types/index.html.haml
@@ -20,7 +20,7 @@
         %tr
           %td= link_to assignment_type.name, assignment_type
           %td= assignment_type.points_predictor_display
-          %td= points assignment_type.max_value
+          %td= points assignment_type.total_points
           %td
             %ul.right
               %li
