--- a/app/views/assignments/_unlock_condition_fields.haml
+++ b/app/views/assignments/_unlock_condition_fields.haml
@@ -11,7 +11,7 @@
     = f.input :condition_id, :collection => current_course.badges.map { |l| [l.name, l.id] }, :include_blank => true, :label => "#{term_for :badge}"
     = f.input :condition_state, :collection => ["Earned"], :label => "State Achieved"
     = f.input :condition_value, :label => "Number of Times Earned"
-    = f.input :condition_date, as: :string, :include_blank => true, :input_html => { :class => 'datetimepicker', :value => f.try(:condition_date) }, :label => "Done By"
+    = f.text_field :condition_date, as: :string,  :input_html => { :class => 'datetimepicker', :include_blank => true,:value => f.try(:condition_date) }, :label => "Done By"
   .right
     = f.hidden_field :_destroy, class: 'destroy'
     = link_to 'Delete Condition', '#', class: 'remove-unlock-condition button right'
