--- a/app/views/assignments/index.html.haml
+++ b/app/views/assignments/index.html.haml
@@ -22,7 +22,7 @@
         %h3.collapse
           %a
             %i.fa.fa-angle-double-right.fa-fw
-          .assignment-name #{assignment_type.name} – #{points assignment_type.max_value} points
+          .assignment-name #{assignment_type.name} – #{points assignment_type.total_points} points
         .collapse-hidden
           %table.responsive{"aria-describedby" => "assignment-type-#{assignment_type.id}"}
             %thead
