Add description to twitter handle on course form

--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -64,6 +64,7 @@
     .form-item
       = f.label :twitter_handle, "Twitter Handle"
       = f.text_field :twitter_handle
+      .form_label Don't include the @ sign
 
     .form-item
       = f.label :twitter_hashtag, "Hashtag"
