Predictor Weights Enhancements
  * fix calculation of default weight
  * restyle default weight in assignment type section header
  * fix for total points when grade scheme elements have yet to be defined

--- a/app/assets/javascripts/angular/templates/ng_predictor_weights.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_weights.html.haml
@@ -1,5 +1,5 @@
-.predictor-title-right-span X
-.predictor-title-right-span.padded{'ng-if' => '! hasWeights()'} {{defaultMultiplier()}}
+.predictor-title-right-span x
+.predictor-default-weight.predictor-title-right-span.padded{'ng-if' => '! hasWeights()'} {{defaultMultiplier() | number}}
 
 .coins{{'ng-if'=>'weightsOpen()'}}
   .coin{{'ng-click'=>'decrement()', 'ng-repeat' => 'coin in usedWeights()'}}
@@ -10,4 +10,3 @@
 .coins{{'ng-if'=>'!weightsOpen()'}}
   .coin-non-interactive{{'ng-repeat' => 'coin in usedWeights()'}}
 
-.predictor-title-right-span =
