--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -154,6 +154,13 @@ $predictor-font-size-4 : .85rem
       float: left
       &.padded
         padding: 0 0 0 10px
+      &.predictor-default-weight
+        font-size: $predictor-font-size-3
+        height: $predictor-font-size-2
+        background-color: $color-blue-1
+        padding: 2px 5px
+        margin: 4px 0 0 10px
+        border-radius: 6px
     .icon
       display: inline
       float: none
