--- a/app/assets/javascripts/angular/templates/ng_predictor_weights.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_weights.html.haml
@@ -1,5 +1,5 @@
 .predictor-title-right-span x
-.predictor-default-weight.predictor-title-right-span.padded{'ng-if' => '! hasWeights()'} {{defaultMultiplier() | number}}
+.predictor-default-weight.predictor-title-right-span.padded{'ng-if' => '! hasWeights()'} {{defaultMultiplier()}}
 
 .coins{{'ng-if'=>'weightsOpen()'}}
   .coin{{'ng-click'=>'decrement()', 'ng-repeat' => 'coin in usedWeights()'}}
